--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -10,7 +10,7 @@
 <PageTitle>Home</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-16 px-8">
-    <MudGrid>
+    <MudGrid Spacing="1">
         <MudItem xs="12">
             <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
                 <MudText Typo="Typo.h3">SimTECH</MudText>
