--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -67,6 +67,10 @@
                         </MudStack>
                     }
 
+                    <MudSpacer />
+
+                    @*just save every list saved to (copy first (tolist>toarray?)) a dict*@
+                    <MudButton>Summary</MudButton>
                     @*<MudButton Variant="Variant.Filled"
                                Color="Color.Info"
                                StartIcon="@Icons.Material.Filled.Refresh">
