--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -48,7 +48,7 @@
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 1)
                             {
-                                <EditEngines SeasonId="@SeasonId" PreviousSeasonId="@(PreviousSeason?.Id ?? null)" />
+                                <EditEngines LeagueId="@Season.LeagueId" SeasonId="@SeasonId" PreviousSeasonId="@(PreviousSeason?.Id ?? null)" />
                             }
                         </ChildContent>
                     </MudStep>
@@ -64,7 +64,7 @@
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 3)
                             {
-                                <EditTeams SeasonId="@SeasonId" PreviousSeasonId="@(PreviousSeason?.Id ?? null)" />
+                                <EditTeams LeagueId="@Season.LeagueId" SeasonId="@SeasonId" PreviousSeasonId="@(PreviousSeason?.Id ?? null)" />
                             }
                         </ChildContent>
                     </MudStep>
