--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -92,7 +92,7 @@
                 Points = driver.Points,
                 HiddenPoints = driver.HiddenPoints,
                 SeasonTeamId = driver.SeasonTeamId,
-                Team = driverTeam?.Name ?? "None",
+                Team = driverTeam?.Team?.Name ?? "None",
 
                 ResultCells = driver.Results.Select(ToResultCell).ToList(),
             };
