--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Setup/DriverTopic.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Setup/DriverTopic.razor
@@ -1,5 +1,6 @@
 ﻿<MudPaper>
-    <MudText>Blokes participating at races</MudText>
+    <MudText Typo="Typo.h6">Blokes participating at races</MudText>
+    <MudDivider />
 
     <MudSimpleTable>
         <thead>
