--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -130,7 +130,7 @@ th {
 }
 
 .text-center {
-    text-align: center;
+    text-align: center !important;
 }
 
 /* extensions on mudblazor css variables */
