--- a/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
@@ -1,9 +1,9 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Modify tyre manufacturer</MudText>
+        <MudText>Modify tyre supplier</MudText>
         <MudText>
-            PS: Wear is subtracted from tyre, so higher number = more wear.
-            Pace meanwhile is an additional number which adds to every 'advance', not the total tyre pace
+            Hint 1: Wear is subtracted from the remaining life of the tyre, thus a positive number correlates to more wear.<br/>
+            Hint 2: Life Bonus is added to the total pace of the currently fitted tyre.
         </MudText>
     </TitleContent>
     <DialogContent>
@@ -11,10 +11,11 @@
             <MudTextField T="string" @bind-Value="Model.Name" Label="Name" Class="field-md" />
             <MudColorPicker @bind-Text="Model.Colour" Label="Colour" Placeholder="Select colour" DisableAlpha="true" Class="field-sm" />
             <MudColorPicker @bind-Text="Model.Accent" Label="Accent" Placeholder="Select accent" DisableAlpha="true" Class="field-sm" />
-            <MudNumericField T="int" @bind-Value="Model.Pace" Label="Pace" Class="field-sm" />
+            <MudNumericField T="int" @bind-Value="Model.Pace" Label="Life Bonus" Class="field-sm" />
+            
             <MudStack Row="true" Spacing="4">
-                <MudNumericField T="int" @bind-Value="Model.WearMin" Label="WearMin" Class="field-sm" />
-                <MudNumericField T="int" @bind-Value="Model.WearMax" Label="WearMax" Class="field-sm" />
+                <MudNumericField T="int" @bind-Value="Model.WearMin" Label="Minimum wear" Class="field-sm" />
+                <MudNumericField T="int" @bind-Value="Model.WearMax" Label="Maximum wear" Class="field-sm" />
             </MudStack>
         </MudForm>
         <MudPaper Height="100px" Class="d-flex flex-column">
