--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -12,16 +12,19 @@
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </MudStack>
+        <MudText Color="Color.Info">These values do not apply when using wet tyres.</MudText>
     </MudPaper>
     <MudTable Items="@ManufacturerData" Bordered="true" Dense="true">
         <HeaderContent>
             <MudTh>Name</MudTh>
-            <MudTh>Pace</MudTh>
+            <MudTh>Life Bonus</MudTh>
             <MudTh>Wear</MudTh>
             <MudTh></MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd Style="@ViewHelper.SetFullColourstyle(context.Colour, context.Accent)">@context.Name</MudTd>
+            <MudTd>
+                <SupplierDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Name</SupplierDisplay>
+            </MudTd>
             <MudTd>
                 <MudText Typo="Typo.caption">@context.Pace</MudText>
             </MudTd>
