--- a/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
@@ -4,9 +4,6 @@
     <MudTabPanel Text="Q1">
         <MudPaper MinHeight="60px">
             <MudStack Row="true" AlignItems="AlignItems.Center">
-                <CountryFlag Code="@Model.Country" />
-                <MudText Typo="Typo.h5">@Model.Name - QUALIFYING Q1</MudText>
-                <MudSpacer />
                 <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
                     <ScreenshotButton TargetId="q1-result-table" />
                     @if (advancedQ1 != Model.AmountRuns && !Model.IsFinished)
@@ -17,6 +14,12 @@
             </MudStack>
         </MudPaper>
         <MudTable Items="@DriversInQ1.OrderBy(e => e.PositionQ1)" Dense="true" Class="extra-dense" id="q1-result-table">
+            <ToolBarContent>
+                <MudStack Row="true" AlignItems="AlignItems.Center">
+                    <CountryFlag Code="@Model.Country" />
+                    <MudText Typo="Typo.h5">@Model.Name - QUALIFYING Q1</MudText>
+                </MudStack>
+            </ToolBarContent>
             <HeaderContent>
                 <MudTh>#</MudTh>
                 <MudTh Class="pa-0"></MudTh>
@@ -84,9 +87,6 @@
     <MudTabPanel Text="Q2" Disabled="@(advancedQ1 != Model.AmountRuns)">
         <MudPaper MinHeight="60px">
             <MudStack Row="true" AlignItems="AlignItems.Center">
-                <CountryFlag Code="@Model.Country" />
-                <MudText Typo="Typo.h5">@Model.Name - QUALIFYING Q2</MudText>
-                <MudSpacer />
                 <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
                     <ScreenshotButton TargetId="q2-result-table" />
                     @if (advancedQ2 != Model.AmountRuns && !Model.IsFinished)
@@ -97,6 +97,12 @@
             </MudStack>
         </MudPaper>
         <MudTable Items="@DriversInQ2.OrderBy(e => e.PositionQ2)" Dense="true" Class="extra-dense" id="q2-result-table">
+            <ToolBarContent>
+                <MudStack Row="true" AlignItems="AlignItems.Center">
+                    <CountryFlag Code="@Model.Country" />
+                    <MudText Typo="Typo.h5">@Model.Name - QUALIFYING Q2</MudText>
+                </MudStack>
+            </ToolBarContent>
             <HeaderContent>
                 <MudTh>#</MudTh>
                 <MudTh Class="pa-0"></MudTh>
@@ -164,9 +170,6 @@
     <MudTabPanel Text="Q3" Disabled="@(advancedQ2 != Model.AmountRuns)">
         <MudPaper MinHeight="60px">
             <MudStack Row="true" AlignItems="AlignItems.Center">
-                <CountryFlag Code="@Model.Country" />
-                <MudText Typo="Typo.h5">@Model.Name - QUALIFYING Q3</MudText>
-                <MudSpacer />
                 <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
                     <ScreenshotButton TargetId="q3-result-table" />
                     @if (!Model.IsFinished)
@@ -184,6 +187,12 @@
             </MudStack>
         </MudPaper>
         <MudTable Items="@DriversInQ3.OrderBy(e => e.PositionQ3)" Dense="true" Class="extra-dense" id="q3-result-table">
+            <ToolBarContent>
+                <MudStack Row="true" AlignItems="AlignItems.Center">
+                    <CountryFlag Code="@Model.Country" />
+                    <MudText Typo="Typo.h5">@Model.Name - QUALIFYING Q3</MudText>
+                </MudStack>
+            </ToolBarContent>
             <HeaderContent>
                 <MudTh>#</MudTh>
                 <MudTh Class="pa-0"></MudTh>
