--- a/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
@@ -3,23 +3,29 @@
 <MudContainer MaxWidth="MaxWidth.False">
     <MudPaper MinHeight="60px">
         <MudStack Row="true" AlignItems="AlignItems.Center">
-            <CountryFlag Code="@Model.Country" />
-            <MudText Typo="Typo.h5">@Model.Name - QUALIFYING</MudText>
-            <MudSpacer />
-            <MudButtonGroup Variant="Variant.Outlined">
+            <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
                 <ScreenshotButton TargetId="qualy-result-table" />
-                @if (advanced == Model.AmountRuns)
+                @if (!Model.IsFinished)
                 {
-                    <MudButton Variant="Variant.Outlined" OnClick="@(() => CallbackFinish.InvokeAsync())">Finish</MudButton>
-                }
-                else
-                {
-                    <MudButton OnClick="Advance">Advance</MudButton>
+                    @if (advanced == Model.AmountRuns)
+                    {
+                        <MudButton Variant="Variant.Outlined" OnClick="@(() => CallbackFinish.InvokeAsync())">Finish</MudButton>
+                    }
+                    else
+                    {
+                        <MudButton OnClick="Advance">Advance</MudButton>
+                    }
                 }
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
     <MudTable Items="@Model.QualifyingDrivers.OrderBy(e => e.Position)" Dense="true" Class="extra-dense" id="qualy-result-table">
+        <ToolBarContent>
+            <MudStack Row="true" AlignItems="AlignItems.Center">
+                <CountryFlag Code="@Model.Country" />
+                <MudText Typo="Typo.h5">@Model.Name - QUALIFYING</MudText>
+            </MudStack>
+        </ToolBarContent>
         <HeaderContent>
             <MudTh>#</MudTh>
             <MudTh Class="pa-0"></MudTh>
