--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
@@ -69,8 +69,8 @@
 @code {
     [CascadingParameter] public AddEntrantsModel Model { get; set; }
 
+    [Parameter, EditorRequired] public long LeagueId { get; set; }
     [Parameter, EditorRequired] public long SeasonId { get; set; }
-
     [Parameter] public long? PreviousSeasonId { get; set; }
 
     List<Manufacturer> manufacturers;
@@ -97,7 +97,7 @@
 
         foreach (var team in Model.BaseTeams.Where(e => !(Model.SeasonTeams.Select(st => st.TeamId).Contains(e.Id))))
         {
-            var previousTeam = await _entrantService.FindRecentSeasonTeam(team.Id);
+            var previousTeam = await _entrantService.FindRecentSeasonTeam(team.Id, LeagueId);
 
             var model = new EditSeasonTeamModel(previousTeam);
             model.ResetIdentifierFields();
