--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Glossary.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Glossary.razor
@@ -1,21 +1,43 @@
 ﻿<MudPaper>
-    <MudSimpleTable>
-        <thead>
-            <tr>
-                <th>Term</th>
-                <th>Purpose</th>
-                <th>Synonyms</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Advance</td>
-                <td>
-                    A single round of calculation for every driver during a race.
-                    Equivalent for a certain distance traveled during a race, for which the default is 10km.
-                </td>
-                <td>Calculation</td>
-            </tr>
-        </tbody>
-    </MudSimpleTable>
+    <MudTable T="GlossaryItem" Items="@glossaryTerms">
+        <HeaderContent>
+            <MudTh>Term</MudTh>
+            <MudTh>Explain</MudTh>
+            <MudTh>Synonyms</MudTh>
+        </HeaderContent>
+        <RowTemplate>
+            <MudTd>
+                <MudText>@context.Term</MudText>
+            </MudTd>
+            <MudTd>
+                <MudText Typo="Typo.body2">@context.Explain</MudText>
+            </MudTd>
+            <MudTd>
+                <MudText>@(string.Join(", ", context.Synonyms))</MudText>
+            </MudTd>
+        </RowTemplate>
+    </MudTable>
 </MudPaper>
+
+@code {
+    private static readonly GlossaryItem[] glossaryTerms = new GlossaryItem[]
+        {
+            new GlossaryItem("Advance", @"A single round of calculation for every driver during a race.
+                    Equivalent for a certain distance traveled during a race, for which the default is 10km.",
+                    "Calculation"),
+        };
+
+    internal class GlossaryItem
+    {
+        internal GlossaryItem(string? term, string? explain, params string[] synonyms)
+        {
+            Term = term ?? string.Empty;
+            Explain = explain ?? string.Empty;
+            Synonyms = synonyms ?? Array.Empty<string>();
+        }
+
+        public string Term { get; set; }
+        public string Explain { get; set; }
+        public string[] Synonyms { get; set; }
+    }
+}
