--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -8,7 +8,7 @@
     {
         <MudStack Row="true" Class="mud-width-full">
             <MudPaper Class="pa-2" Width="20%">
-                <MudStack>
+                <MudStack Class="mud-height-full">
                     <MudText Typo="Typo.h6">Settings</MudText>
                     <MudDivider />
                     <MudStack Spacing="0">
